typescript/checker/tests/conformance/types/tuple/wideningTuples3.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            49,
        ),
        hi: BytePos(
            50,
        ),
        ctxt: #0,
    },
    left: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    31,
                ),
                hi: BytePos(
                    36,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                32,
                            ),
                            hi: BytePos(
                                35,
                            ),
                            ctxt: #0,
                        },
                        kind: TsAnyKeyword,
                    },
                ),
            ],
        },
    ),
    right: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    53,
                ),
                hi: BytePos(
                    70,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                54,
                            ),
                            hi: BytePos(
                                63,
                            ),
                            ctxt: #0,
                        },
                        kind: TsUndefinedKeyword,
                    },
                ),
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                65,
                            ),
                            hi: BytePos(
                                69,
                            ),
                            ctxt: #0,
                        },
                        kind: TsNullKeyword,
                    },
                ),
            ],
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples3.ts:4:9
  |
4 | var b = a = [undefined, null];
  |         ^

error: ImplicitAny {
    span: Span {
        lo: BytePos(
            45,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples3.ts:4:5
  |
4 | var b = a = [undefined, null];
  |     ^

